[package]
edition = "2021"
name = "avahq_resampler-native-rubato"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.20"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
rubato = "0.14.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
